--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,164 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+
+.counter {
+ display: flex;
+ flex-direction: row;
+ justify-content: center;
+ 
+}
+
+.counter button {
+  width: 50px;
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.counter p {
+  font-weight: bold;
+}
+
+.navigation button {
+  width: 150px;
+  height: 45px;
+}
+
+.colored {
+  color:red;
+}
+.colorgreen {
+  color:green;
+}
+
+#square {
+  width: 150px;
+  height: 150px;
+  border:1px solid black;
+  margin-left: 10px;
+}
+
+#square span {
+   display: block;
+   justify-content: center;
+   margin-top: 25px;
+   font-weight: bold;
+   font-size: 50px;
+}
+
+.Dices {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.active {
+  background-color: black;
+  color:white;
+  background: black;
+}
+.navigation button:hover {
+  background-color:black;
+  color:white;
+  background: black;
+}
+
+.counter :nth-child(2):hover {
+  background-color: green;
+  color:white;
+}
+
+.counter :nth-child(3):hover {
+  background-color: red;
+  color:white;
+}
+
+.slide {
+  width: 100px;
+}
+
+.navigation {
+  margin-top: 25px;
+}
+.navigation button {
+  margin-left: 5px;
+  border-radius: 5px;
+  box-shadow: 0px 10px 14px -7px #3e7327;
+	border-radius:4px;
+	border:1px solid #4b8f29;
+	display:inline-block;
+	cursor:pointer;
+	font-family:Arial;
+	font-size:13px;
+	font-weight:bold;
+	padding:6px 12px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #5b8a3c;
+}
+
+.button {
+  margin-left: 5px;
+  border-radius: 5px;
+	border-radius:4px;
+	border:1px solid #4b8f29;
+	display:inline-block;
+	cursor:pointer;
+	font-family:Arial;
+	font-size:13px;
+	font-weight:bold;
+	padding:6px 12px;
+	text-decoration:none;
+	text-shadow:0px 1px 0px #5b8a3c;
+}
+
+
+.visible {
+  display: block;
+}
+
+.unvisible {
+  display: none;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  margin-left: 530px;;
+}
+
+.exercise {
+  border: 1px solid black;
+  width: 100px;
+  border-radius: 5px;
+  margin-top: 5px;
+  
+}
+
+.exercises {
+  margin-left: 15px;
+}
+
+.exercises :nth-child(2n){
+  background-color: green;
+  color:white;
+  margin-left: 15px;
+}
+
+.exercises :nth-child(2n-1){
+  background-color:purple;
+  color:white;
+}
+
+*{
+  font-family: 'Roboto',sans-serif;
 }
